--- a/ariadne/templates/ariadne/solver.html
+++ b/ariadne/templates/ariadne/solver.html
@@ -5,6 +5,7 @@
     <title>Solver</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/ariadne_style.css' %}">
+    <link rel="icon" href="{% static 'img/ariadne_logo.png' %}" type="image/png">
     <style>
 
         body::after {
