--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>TravelGPT</title>
+  <link rel="icon" href="{% static 'img/travelgpt_logo.ico' %}" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/standard_formatting.css' %}">
@@ -10,14 +11,7 @@
   <!-- To use the select2 library: -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-
-
-
-  <!-- <style>
-    <link rel="stylesheet" href="path/to/your/css/file.css">
-    /* Custom CSS styles */
-    /* Add your own custom styles here */
-  </style> -->
+  
 </head>
 <body>
   <div class="container">
@@ -28,6 +22,13 @@
     To plan your ideal holiday, simply fill out the information below, and TravelGPT will do the rest!
     </div>
     <div style="margin-top: 15px;"></div>
+    <h2 class="text-center" style="margin-top: 20px;">Examples</h2>
+
+    <div class="d-flex justify-content-center">
+      <a id="params_done_button" href="{% url 'travelgpt:barcelona' %}" class="btn btn-primary text-center" style="margin-top: 5px;">Barcelona</a>
+      <a id="params_done_button" href="{% url 'travelgpt:beijing' %}" class="btn btn-primary text-center" style="margin-top: 5px; margin-left: 15px; margin-right: 15px;">Beijing</a>
+      <a id="params_done_button" href="{% url 'travelgpt:prague' %}" class="btn btn-primary text-center" style="margin-top: 5px;">Prague</a>
+    </div>
     
     <h2 class="text-center" style="margin-top: 20px;">&#9992; Your Upcoming Trip &#9992;</h2>
 
@@ -64,7 +65,9 @@
       </div>
       
       <div class="form-group">
-        <label for="interests">Interests:</label>
+        <div class="text-center" sytle="margin-bottom: 10px;">
+          <label for="interests" >Interests:</label>
+        </div>
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="checkbox" name="interests" value="nature">
             <label class="form-check-label" for="nature">Nature</label>
@@ -149,7 +152,7 @@
       <p id="loading-text" class="mt-2 d-none" style="margin-left: 25px;">TravelGPT is constructing your itinerary...</p>
     </div>
 
-    <div class="text-center" style="margin-top: -15px;">
+    <div id="homepage-link" class="text-center" style="margin-top: -15px;">
       <a href="{% url 'homepage:index' %}">Go to Homepage</a>
     </div>
 
@@ -165,10 +168,11 @@
         var form = event.target;
         var formData = new FormData(form);
 
-        // Display the loading spinner
+        // Display the loading spinner, hide the homepage link and form
         document.getElementById('loading-spinner').querySelector('.spinner-border').classList.remove('d-none');
         document.getElementById('loading-text').classList.remove('d-none');
         document.getElementById('myForm').classList.add('d-none');
+        document.getElementById('homepage-link').classList.add('d-none');
         
         // Make a POST request
         var xhr = new XMLHttpRequest();
@@ -177,8 +181,6 @@
         xhr.send(formData);
         xhr.onreadystatechange = function() {
             if (xhr.readyState === XMLHttpRequest.DONE) {
-              // Hide the loading spinner
-              document.getElementById('loading-spinner').style.display = 'none';
               
                 if (xhr.status === 200) {
                   var response = JSON.parse(xhr.responseText);
