--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -5,6 +5,7 @@
     <title>Edward Schamp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/home_style.css' %}">
+    <link rel="icon" href="{% static 'img/edward_logo.ico' %}" type="image/x-icon">
     <!-- <link rel="stylesheet" href="{% static 'css/menu_style.css' %}"> -->
 </head>
 <body>
