--- a/ariadne/templates/ariadne/robots.html
+++ b/ariadne/templates/ariadne/robots.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Moon</title>
+    <title>Robots</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/ariadne_style.css' %}">
     <link rel="icon" href="{% static 'img/ariadne_logo.png' %}" type="image/png">
