--- a/homepage/templates/homepage/new_index.html
+++ b/homepage/templates/homepage/new_index.html
@@ -65,7 +65,7 @@
 
                 <div class="row justify-content-center" style="margin-top:30px;">
 
-                    <div class="col-5 col-xs-6 col-sm-4 col-md-2 text-center" style="margin-left:10px; margin-right:10px;">
+                    <div class="col-5 col-xs-6 col-sm-4 col-md-2 text-center" style="margin-left:10px; margin-right:10px; margin-top:20px;">
                         <a href="{% static 'docs/Edward_Schamp_CV_ML.pdf' %}" style="text-decoration:none;">
                             <div class="icon-container mb-3">
                                 <img src="{% static 'img/cv_icon.png' %}">
@@ -77,7 +77,7 @@
                     </div>
 
                     
-                    <div class="col-5 col-xs-6 col-sm-4 col-md-2 text-center" style="margin-left:10px; margin-right:10px;">
+                    <div class="col-5 col-xs-6 col-sm-4 col-md-2 text-center" style="margin-left:10px; margin-right:10px; margin-top:20px;">
                         <a href="https://www.linkedin.com/in/edwardschamp/" style="text-decoration:none;">
                             <div class="icon-container mb-3">
                                 <img src="{% static 'img/linkedin_icon.png' %}">
