redirect to ariadne readme

--- a/homepage/templates/homepage/new_index.html
+++ b/homepage/templates/homepage/new_index.html
@@ -167,7 +167,7 @@
                                     </div>    
                                 </a>
                                 <div style="margin-top:20px; margin-bottom: 20px;">
-                                    <a href="https://github.com/Eschamp01/TravelGPT/tree/main/frontend#-welcome-to-travelgpt-" class="github-button" 
+                                    <a href="https://github.com/Eschamp01/TravelGPT/tree/main/ariadne#-welcome-to-ariadne-" class="github-button" 
                                     style="background-color: white; border: 2px solid black; color: black; padding: 10px; border-radius:5px;">
                                     Project GitHub
                                     </a>
