geoDB API city autocomplete

--- a/static/css/standard_formatting.css
+++ b/static/css/standard_formatting.css
@@ -9,7 +9,7 @@ body {
 
 .container {
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 850px;
     padding: 20px;
     background-color: #ffffff;
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.1);
@@ -69,32 +69,16 @@ a:hover {
     text-decoration: underline;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
-    border-color: var(--primary-color) transparent transparent transparent;
-}
-
-.select2-dropdown {
-    border-color: var(--primary-color);
-}
-
-.select2-results__option--highlighted,
-.select2-results__option--highlighted[aria-selected] {
-    background-color: var(--primary-color);
-    color: white;
-}
-
-
-.select2-results__option {
-    font-family: 'Lobster', cursive;
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.ui-front {
+    background: white;
+    width: 300px;
+    border: 1px solid var(--primary-color);
+    border-radius: 10px;
+    margin-top: 5px;
     color: var(--primary-color);
-  }
-  
-  .select2-results__option[aria-selected="true"] {
-    background-color: #136F7A;
-    color: #ffffff;
-  }
-  
-  .select2-container--open .select2-dropdown {
-    border-color: var(--primary-color);
-  }
-  
+}
+
+.ui-state-active {
+    background-color: #F3F8F2;
+    border-radius: 10px;
+}
