--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -6,12 +6,12 @@
   <link rel="icon" href="{% static 'img/travelgpt_logo.ico' %}" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
+
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
   <link rel="stylesheet" href="{% static 'css/standard_formatting.css' %}">
 
-  <!-- To use the select2 library: -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-  
 </head>
 <body>
   <div class="container">
@@ -35,8 +35,9 @@
     <form id="myForm" action="{% url 'travelgpt:process_form' %}" method="POST">
       <div class="form-group">
         <div class="col-sm-9 col-lg-4 text-center mx-auto">
-          <label>Destination City:</label>
-          <input type="text" class="form-control" name="destination" id="destination" placeholder="Enter destination city">
+          <label for="city">Destination City:</label>
+          <input id="city" class="form-control" name="destination" id="destination">
+          {% comment %} <input type="text" class="form-control" name="destination" id="destination" placeholder="Enter destination city"> {% endcomment %}
         </div>
       </div>
       
@@ -158,7 +159,110 @@
 
   </div>
 
+  {% comment %} <script>
+    $(document).ready(function() {
+      $('.city-select').on('select2:open', () => {
+          // After the dropdown is opened, focus the search field
+          document.querySelector('.select2-search__field').focus();
+      });
+
+        $('.city-select').select2({
+            ajax: {
+                url: function (params) {
+                    return 'http://geodb-free-service.wirefreethought.com/v1/geo/cities?namePrefix=' + params.term;
+                },
+                dataType: 'json',
+                delay: 250,
+                processResults: function (data) {
+                    return {
+                        results: $.map(data.data, function(item) {
+                            return {
+                                text: item.name,
+                                id: item.id
+                            }
+                        })
+                    };
+                },
+                cache: true
+            },
+            placeholder: 'Search for a city',
+            minimumInputLength: 1  // User must type at least 1 character
+        });
+    });
+  </script> {% endcomment %}
+
+  <script>
+    $(function() {
+      var activeItem = null;
+      var isItemSelected = false;
+      $("#city").autocomplete({
+          source: function(request, response) {
+              $.ajax({
+                  url: "http://geodb-free-service.wirefreethought.com/v1/geo/cities",
+                  data: {
+                      namePrefix: request.term,
+                      limit: 5  // You can limit the number of results here
+                  },
+                  success: function(data) {
+                      // Map the results to the format expected by jQuery UI
+                      response($.map(data.data, function(item) {
+                          return { label: item.name, value: item.name };
+                      }));
+                  }
+              });
+          },
+          minLength: 1,
+          open: function() {
+              // Select the first item by default
+              if (!isItemSelected) {
+                  activeItem = $(this).autocomplete("instance").menu.element.children().first();
+                  activeItem.addClass('ui-state-active');
+              }
+          },
+          select: function(event, ui) {
+              $(this).autocomplete("instance").menu.element.children().first().removeClass('ui-state-active');
+              isItemSelected = true;
+              event.preventDefault();
+    
+              // Set the input's value to the item that is currently focused
+              activeItem = $(this).data("ui-autocomplete").menu.active;
+              if (activeItem) {
+                  $(this).val(activeItem.text());
+              } else {
+                  $(this).val(ui.item.value);
+              }
+          }
+      }).keydown(function(e) {
+          var keyCode = e.keyCode || e.which; 
+          if (keyCode === 13) { // 13 is the keycode for Enter
+              e.preventDefault();
+              if (activeItem) {
+                activeItem.click();
+              }
+              $(this).autocomplete('instance').menu.element.children().first().click();
+              return false;
+          } else if (keyCode === 38 || keyCode === 40) { // 38 is up arrow, 40 is down arrow
+            isItemSelected = true;
+          }
+          else {
+            isItemSelected = true;
+          }
+      }).on('change', function() {
+        isItemSelected = true;
+      });
+    });
+
+    $(document).ready(function() {
+      $('form input').keypress(function(e) { 
+          var keyCode = e.keyCode || e.which; 
+          if (keyCode === 13) { // 13 is the keycode for Enter
+              e.preventDefault();
+              return false;
+          }
+      });
+    });
   
+  </script>
 
   <script>
     document.getElementById('myForm').addEventListener('submit', function(event) {
@@ -198,15 +302,8 @@
     });
   </script>
 
-  <script>
-    $(document).ready(function() {
-        $('.form-control').select2();
-    });
-  </script>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
 </body>
 </html>
 
